# Non_Repetetive_LiDAR_Registertion

./: CMakeLists.txt  Pctools.py  README.md  ablation.py  compute_rmse_ablation.py  evaluate.py  nonrep.py  package.xml
Figures/: figsinfo.txt
config/: non_rep_lidar.yaml
launch/: non_rep_lidar.launch.py
output/ablation/: summary.csv
output/eval/: BA6aa.csv  BA6rr.csv  comprehensive_metrics_closest_distance.csv  method_comparison_matrix_closest_distance.json  trajectory_metrics_closest_distance.csv  trajectory_metrics_summary.csv  transformation_matrices_closest_distance.json
output/non_repetitive_lidar_z_zero/: BIA6gt.csv  combined_map_z_zero.pcd  final_poses.csv  final_poses001.csv  final_poses010.csv  final_poses100.csv  final_posesog.csv  processing_results.json
scripts/: Pctools.py  odom_to_tum.py  ros_non_rep.py
src/: regnonrep.cpp
testdata/Charm/: cloud000000.pcd  cloud000001.pcd  cloud000002.pcd  cloud000003.pcd  cloud000004.pcd  cloud000005.pcd  cloud000006.pcd  cloud000007.pcd  cloud000008.pcd  cloud000009.pcd  cloud000010.pcd  cloud000011.pcd  cloud000012.pcd  cloud000013.pcd  cloud000014.pcd  cloud000015.pcd  cloud000016.pcd  cloud000017.pcd  cloud000018.pcd  cloud000019.pcd  cloud000020.pcd  cloud000021.pcd  cloud000022.pcd  cloud000023.pcd  cloud000024.pcd  cloud000025.pcd  cloud000026.pcd  cloud000027.pcd  cloud000028.pcd  cloud000029.pcd  cloud000030.pcd  cloud000031.pcd  cloud000032.pcd  cloud000033.pcd  cloud000034.pcd  cloud000035.pcd  cloud000036.pcd  cloud000037.pcd  cloud000038.pcd  cloud000039.pcd  (+61 more)
tum/: lidar_odom.tum
(+69 files in other folders)
